--- a/HW4/home_work_4.html
+++ b/HW4/home_work_4.html
@@ -23,34 +23,37 @@
       <img class="picture" src="img/picture.jpg" alt="" />
       <div class="menu">
         <ul class="menu_list">
-          <li>Home</li>
-          <li>Traveling</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Traveling</a>
             <ul class="submenu">
-              <li>Article 1</li>
-              <li>Article 2</li>
-              <li>Article 3</li>
-              <li>Article 4</li>
-              <li>Article 5</li>
+              <li><a href="#">Article 1</a></li>
+              <li><a href="#">Article 2</a></li>
+              <li><a href="#">Article 3</a></li>
+              <li><a href="#">Article 4</a></li>
+              <li><a href="#">Article 5</a></li>
             </ul>
-          <li>Service</li>
+          </li>
+          <li><a href="#">Service</a>
             <ul class="submenu">
-              <li>Article 1</li>
-              <li>Article 2</li>
-              <li>Article 3</li>
-              <li>Article 4</li>
-              <li>Article 5</li>
+              <li><a href="#">Article 1</a></li>
+              <li><a href="#">Article 2</a></li>
+              <li><a href="#">Article 3</a></li>
+              <li><a href="#">Article 4</a></li>
+              <li><a href="#">Article 5</a></li>
             </ul>
-          <li>To partners</li>
+          </li>
+          <li><a href="#">To partners</a>
             <ul class="submenu">
-              <li>Article 1</li>
-              <li>Article 2</li>
-              <li>Article 3</li>
-              <li>Article 4</li>
-              <li>Article 5</li>
+              <li><a href="#">Article 1</a></li>
+              <li><a href="#">Article 2</a></li>
+              <li><a href="#">Article 3</a></li>
+              <li><a href="#">Article 4</a></li>
+              <li><a href="#">Article 5</a></li>
             </ul>
-          <li>Feetback</li>
-          <li>About</li>
-          <li>Contact us</li>
+          </li>
+          <li><a href="#">Feetback</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact us</a></li>
         </ul>
       </div>
       <div class="content">
