changes across the mentor's comments

--- a/HW5/Cadastre.html
+++ b/HW5/Cadastre.html
@@ -39,9 +39,24 @@
           </p>
         </div>
         <div class="log_fb">
-          <img src="img/fb_login.png" alt="photo" />
-          <img src="img/lines.png" alt="" />
-          <span>ou</span>
+          <a href="#">
+            <div class="f">
+              <span>f</span>
+            </div>
+            <div class="click_in">
+              <p>log in <span>with</span> Facebook      ></p>
+            </div>
+          </a>
+          <div class="ou">
+
+            <div class="lines">
+
+            </div>
+            <span>ou</span>
+            <div class="lines">
+
+            </div>
+          </div>
         </div>
         <div class="info">
           <form class="personal_info" action="#" method="post">
