CSS been changed

--- a/HW5/Cadastre.html
+++ b/HW5/Cadastre.html
@@ -44,7 +44,7 @@
               <span>f</span>
             </div>
             <div class="click_in">
-              <p>log in <span>with</span> Facebook      ></p>
+              <p>log in <span>with</span> Facebook <span>></span></p>
             </div>
           </a>
           <div class="ou">
