HTML and CSS changed

--- a/HW6/zazor.html
+++ b/HW6/zazor.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Zazor e-Shop</title>
-    <link rel="stylesheet" href="css/head.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/menu_style.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/content.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/logs_and_foot.css" media="screen" title="no title" charset="utf-8">
+    <style >
+      @import "css/head.css";
+      @import "css/menu_style.css";
+      @import "css/content.css";
+      @import "css/logs_and_foot.css";
+    </style>
   </head>
   <body>
     <div class="page">
@@ -96,15 +98,51 @@
             </ul>
       </div>
       <div class="goods">
-        <img src="img/goods_1.png" alt="###" />
-        <img src="img/goods_2.png" alt="###" />
-        <img src="img/goods_3.png" alt="###" />
-        <img src="img/goods_4.png" alt="###" />
-        <img src="img/goods_5.png" alt="###" />
-        <img src="img/goods_6.png" alt="###" />
-        <img src="img/goods_7.png" alt="###" />
-        <img src="img/goods_8.png" alt="###" />
-        <img src="img/goods_9.png" alt="###" />
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_1.png" alt="###"/></figure>
+          <span>90.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_2.png" alt="###"/></figure>
+          <span>115.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_3.png" alt="###"/></figure>
+          <span>393.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_4.png" alt="###"/></figure>
+          <span>90.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_5.png" alt="###"/></figure>
+          <span>115.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_6.png" alt="###"/></figure>
+          <span>393.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_7.png" alt="###"/></figure>
+          <span>90.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_8.png" alt="###"/></figure>
+          <span>115.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_9.png" alt="###"/></figure>
+          <span>393.00 грн.</span>
+        </div>
       </div>
       <div class="right_side">
         <div class="bar">
