--- a/HW5/HW5_TABLE/table.html
+++ b/HW5/HW5_TABLE/table.html
@@ -3,44 +3,44 @@
   <head>
     <meta charset="utf-8">
     <title>Table</title>
-    <link rel="stylesheet" href="css/style_table.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/style_table.css">
     </head>
   <body style="background-color: lightgrey">
     <table>
       <tr class="row_1">
-        <td class="top left" colspan="2" style="width: 150px; height: 50px">Cell 1</td>
-        <td  class="top" colspan="3" style="width: 250px; height: 50px">Cell 3</td>
-        <td class="top right" colspan="2" style="width: 200px; height: 50px;background-color: yellow">Cell 6</td>
+        <td class="top left width150 height50" colspan="2">Cell 1</td>
+        <td  class="top width250 height50" colspan="3">Cell 3</td>
+        <td class="top right width200 height50 yellow" colspan="2">Cell 6</td>
       </tr>
       <tr class="row_2">
         <td class="left">Cell 8</td>
-        <td colspan="4" rowspan="2" style="widht: 325px; height: 325px; background-color: red">Cell 9</td>
-        <td class="right" colspan="2" style="width: 200px; height: 150px; background-color: yellow">Cell 13</td>
+        <td class="width325 height325 red" colspan="4" rowspan="2">Cell 9</td>
+        <td class="right width200 height150 yellow" colspan="2">Cell 13</td>
       </tr>
       <tr class="row_3">
-        <td class="left" rowspan="2" style="width: 75px; height: 250px">Cell 15</td>
-        <td style="width: 100px; height: 175px">Cell 20</td>
-        <td class="right" style="width: 100px; height: 175px">Cell 21</td>
+        <td class="left width75 height250" rowspan="2">Cell 15</td>
+        <td class="width100 height175">Cell 20</td>
+        <td class="right width100 height175">Cell 21</td>
       </tr>
       <tr class="row_4">
-        <td style="background-color: darkgrey">Cell 23</td>
-        <td style="background-color: darkgrey">Cell 24</td>
-        <td colspan="2" style="width: 175px; height: 75px">Cell 25</td>
-        <td class="right" colspan="2" style="width: 200px; height: 75px">Cell 27</td>
+        <td class="darkgrey">Cell 23</td>
+        <td class="darkgrey">Cell 24</td>
+        <td class="width175 height75" colspan="2">Cell 25</td>
+        <td class="right width200 height75" colspan="2">Cell 27</td>
       </tr>
       <tr class="row_5">
-        <td class="left bottom" rowspan="3" style="width: 75px; height: 150px; background-color: yellow">Cell 29</td>
-        <td style="background-color: darkgrey">Cell 30</td>
-        <td style="background-color: darkgrey">Cell 31</td>
-        <td colspan="2" style="width: 175px; height: 75px">Cell 32</td>
-        <td class="right" colspan="2" rowspan="2" style="width: 200px; height: 113px; background-color: blue">Cell 34</td>
+        <td class="left bottom width75 height150 yellow" rowspan="3">Cell 29</td>
+        <td class="darkgrey">Cell 30</td>
+        <td class="darkgrey">Cell 31</td>
+        <td class="width175 height75" colspan="2">Cell 32</td>
+        <td class="right width200 height113 blue" colspan="2" rowspan="2">Cell 34</td>
       </tr>
       <tr class="row_6">
-        <td class="bottom" colspan="2" rowspan="2" style="width: 150px; height: 75px">Cell 37</td>
-        <td colspan="2" style="width: 175px; height: 38px; background-color: darkgrey">Cell 39</td>
+        <td class="bottom width150 height75" colspan="2" rowspan="2">Cell 37</td>
+        <td class="width175 height38 darkgrey" colspan="2">Cell 39</td>
       </tr>
       <tr class="row_7">
-        <td class="right bottom" colspan="4" style="width: 375px; height: 37px">Cell 46</td>
+        <td class="right bottom width375 height37" colspan="4">Cell 46</td>
       </tr>
     </table>
   </body>
