--- a/HW6/zazor.html
+++ b/HW6/zazor.html
@@ -143,6 +143,35 @@
           <figure><img src="img/goods_9.png" alt="###"/></figure>
           <span>393.00 грн.</span>
         </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_7.png" alt="###"/></figure>
+          <span>90.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_8.png" alt="###"/></figure>
+          <span>115.00 грн.</span>
+        </div>
+        <div class="goods__box">
+          <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+          <figure><img src="img/goods_9.png" alt="###"/></figure>
+          <span>393.00 грн.</span>
+        </div>  <div class="goods__box">
+            <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+            <figure><img src="img/goods_7.png" alt="###"/></figure>
+            <span>90.00 грн.</span>
+          </div>
+          <div class="goods__box">
+            <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+            <figure><img src="img/goods_8.png" alt="###"/></figure>
+            <span>115.00 грн.</span>
+          </div>
+          <div class="goods__box">
+            <figcaption>goodyear<br><span>ultra grip extreme</span></figcaption>
+            <figure><img src="img/goods_9.png" alt="###"/></figure>
+            <span>393.00 грн.</span>
+          </div>
       </div>
       <div class="right_side">
         <div class="bar">
